# workflow-base

./: .gitignore  .mise.toml  pyproject.toml
workflow_base/: __init__.py  processor.py  rabbitmq_consumer.py  workflow_config.py  workflow_manager.py
