[tool.poetry]
name = "workflow-base"
version = "0.1.0"
description = ""
authors = ["Nguyen Tran <merlinvn@gmail.com>"]
readme = "README.md"
packages = [{ include = "workflow_base", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
